kubernetes/pods/butterfly-demo-istio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: butterfly-4-istio
  labels:
    app: butterfly-4-istio
    version: v1
spec:
  ports:
  - port: 57575
    protocol: TCP
    targetPort: 57575
    name: http
  selector:
    app: butterfly-4-istio
