kubernetes/pods/butterfly-demo-istio/route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: butterfly-4-istio-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "butterfly-4.istio.prod-1.devops.bot"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: butterfly-4-istio
spec:
  hosts:
  - "butterfly-4.istio.prod-1.devops.bot"
  gateways:
  - butterfly-4-istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: butterfly-4-istio
      weight: 100
    websocketUpgrade: true
